user dump added

--- a/client/partials/user-detail.html
+++ b/client/partials/user-detail.html
@@ -8,7 +8,7 @@
         <ul class="nav nav-tabs">
             <li><a href="#User" data-toggle="tab">User</a></li>
             <li><a href="#Picture" data-toggle="tab">Picture</a></li>
-            <li><a href="#Memberships" data-toggle="tab">Memberships</a></li>
+            <li><a href="#Groups" data-toggle="tab">Memberships</a></li>
         </ul>
 
 
@@ -101,7 +101,7 @@
 
 
 
-            <div class="tab-pane" id="Memberships">
+            <div class="tab-pane" id="Groups">
                 <small>Below are the groups <em>you</em> are the owner of.<br>
                     Select the groups that the user is member of.</small>
 
