--- a/client/partials/user-list.html
+++ b/client/partials/user-list.html
@@ -4,6 +4,10 @@
     <button class="btn btn-primary">Create</button>
 </a>
 
+<a class="floatRight" href="/#/generateUser">
+    <button class="btn btn-primary">Generate</button>
+</a>
+
 <div class="list-group">
     <input ng-model="query" placeholder="Type to start searching...">
 </div>
