First step for addToSet

--- a/client/partials/user-detail.html
+++ b/client/partials/user-detail.html
@@ -102,8 +102,7 @@
 
 
             <div class="tab-pane" id="Groups">
-                <small>Below are the groups <em>you</em> are the owner of.<br>
-                    Select the groups that the user is member of.</small>
+                <small>Select the groups that you are member of.</small>
 
                 <div class="checkbox" class="input-group" data-ng-repeat="group in users.groups">
                     <label>
