--- a/client/partials/user-detail.html
+++ b/client/partials/user-detail.html
@@ -1,4 +1,4 @@
-<form name="userForm">
+<form name="userForm" novalidate>
     <div class="">
 
         <h3>Detail page</h3>
@@ -53,8 +53,8 @@
 
                 <div class="input-group">
                     <span class="input-group-addon input-group-addonWidth">Phone</span>
-                    <input type="text" class="form-control" placeholder="06-1234567" data-ng-model="users.doc.phone"
-                           required="" pattern="06-{0,1}\d{8}">
+                    <input type="text" class="form-control" placeholder="06-12345678" data-ng-model="users.doc.phone"
+                           required="" data-ng-pattern="/^06-{0,1}[0-9]{8}$/">
                 </div>
                 <div class="input-group">
                     <span class="input-group-addon input-group-addonWidth">Email</span>
@@ -83,8 +83,6 @@
             </div>
             <!-- ================================================ -->
 
-
-
             <div class="tab-pane" id="Picture">
                 <div style="float:right">
                     <img data-ng-src="/images/faces/{{users.doc.gender}}/{{users.doc.picture}}">
@@ -97,8 +95,6 @@
 
             </div>
             <!-- ================================================ -->
-
-
 
             <div class="tab-pane" id="Groups">
                 <small>Select the groups that you are member of.</small>
@@ -127,7 +123,10 @@
                     >
                 Delete
             </button>
-
+            <!--http://codepen.io/brunoscopelliti/pen/plFLI-->
+            <!--<button type="button" class="btn btn-success floatRight" data-ng-click="save()"-->
+                    <!--data-ng-disabled="users.doc.phone.$pristine || users.doc.phone.$dirty && userForm.$invalid">Save-->
+            <!--</button>   -->
             <button type="button" class="btn btn-success floatRight" data-ng-click="save()"
                     data-ng-disabled="userForm.$invalid">Save
             </button>
